@@ -92,6 +92,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--add-modules=java.xml.ws.annotation</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
 
             <!-- Custom builders generator -->
